import "cetty/protobuf/service/service_options.proto";

package cetty.protobuf.service;

option java_package = "io.cetty.protobuf.service";
option java_outer_classname = "ServiceProto";

enum MessageType {
    MSG_REQUEST  = 1;
    MSG_RESPONSE = 2;
    MSG_ERROR    = 3;
}

enum ErrorCode {
    ERR_NO_ERROR         = 0;
    ERR_WRONG_PROTO      = 1;
    ERR_NO_SERVICE       = 2;
    ERR_NO_METHOD        = 3;
    ERR_INVALID_REQUEST  = 4;
    ERR_INVALID_RESPONSE = 5;
}

message ServiceMessage {
    required MessageType type = 1;
    required fixed64       id = 2;

    optional string   service = 3;
    optional string    method = 4;

    optional ErrorCode  error = 5;

    optional string  request_encoding = 6; // request may be encode with zlib
    optional string response_encoding = 7; // response may be encode with zlib

    optional bytes    request = 8;
    optional bytes   response = 9;
}

message Empty {
}
